Rework the service/dataset link analyzer. Add the possibility to reanalyze them from the UI.

--- a/web/src/main/webapp/assets/i18n/en.json
+++ b/web/src/main/webapp/assets/i18n/en.json
@@ -36,6 +36,7 @@
   "viewRules": "View report rules",
   "chooseReportType": "Choose report type",
   "removeReportType": "Remove report type",
+  "restartServiceLinker": "Analyze dataset & service links",
   "customFilter": "Query filter",
   "customScope": "Report identifier",
   "customScopeHelp": "This field allows to define a custom report identifiers which will be used as the scope once indicator are loaded. This is useful to make distinction between reports made with custom filters (eg. computing indicators for a specific organization).",
