Add the possibility to know which type of report it is #170.

--- a/web/src/main/webapp/assets/i18n/en.json
+++ b/web/src/main/webapp/assets/i18n/en.json
@@ -34,6 +34,7 @@
   "org": "Organization",
   "email": "Email",
   "viewRules": "View report rules",
+  "reportType": "Report type",
   "chooseReportType": "Choose report type",
   "removeReportType": "Remove report type",
   "restartServiceLinker": "Analyze dataset & service links",
