Data temporal coverage is 2010-2018. Link to JRC geoportal.

--- a/web/src/main/webapp/assets/i18n/en.json
+++ b/web/src/main/webapp/assets/i18n/en.json
@@ -9,10 +9,10 @@
   "adminTitle": "Search index administration page",
   "signoutTitle": "Sign out",
   "signInTitle": "Sing in",
-  "inspireOfficialMonitoringReporting": "INSPIRE official monitoring dashboards",
+  "inspireOfficialMonitoringReporting": "INSPIRE official monitoring dashboards (ref. years 2010 - 2018)",
   "dashboardTitle": "View & create dashboards",
   "latestDashboards": "Latest dashboards",
-  "homeInfo": "Collect information and configure indicators to generate monitoring. Build dashboards using the online creation tools. Share your dashboards and provide access to all monitoring information.",
+  "homeInfo": "Collect information and configure indicators to generate monitoring. Build dashboards using the online creation tools. Share your dashboards and provide access to all monitoring information.<br/><br/>From the ref. year 2019 onward, the INSPIRE official monitoring information is managed directly by the Joint Research Centre of the European Commission through a monitoring system connected to <a href='https://inspire-geoportal.ec.europa.eu'>the INSPIRE Geoportal</a>, where the monitoring information will be published",
   "noDashboard": "No dashboard available",
   "noDashboardHelp": "<strong>There is currently no dashboard available in the system.</strong> Load some from the <a href='dashboard/app/kibana#/management/kibana/objects?_g=()&_a=(tab:dashboards)'>dashboard configuration</a> to upload some new ones.",
   "dashboardLoaded": "<strong>{{number}}</strong> dashboard(s) loaded.",
